# redis_catalog_client

./: .gitignore  pyproject.toml  readme.md  requirements.txt
src/catalog_client/: __init__.py  client.py
